--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "backup": "tsx src/index.ts backup",
+    "backup:global": "tsx src/index.ts backup --all-countries=1 --all-levels=1 --out-dir=./data --delay-ms=400",
+    "backup:push": "bash ./scripts/backup-and-push.sh",
     "serve": "tsx src/index.ts serve"
   },
   "dependencies": {
