--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "backup": "tsx src/index.ts backup",
-    "backup:global": "tsx src/index.ts backup --all-countries=1 --all-levels=1 --out-dir=./data --delay-ms=400",
+    "backup": "GEO_BACKUP_NODE_MB=${GEO_BACKUP_NODE_MB:-12288} NODE_OPTIONS=--max-old-space-size=$GEO_BACKUP_NODE_MB tsx src/index.ts backup",
+    "backup:global": "GEO_BACKUP_NODE_MB=${GEO_BACKUP_NODE_MB:-12288} NODE_OPTIONS=--max-old-space-size=$GEO_BACKUP_NODE_MB tsx src/index.ts backup --all-countries=1 --all-levels=1 --out-dir=./data --delay-ms=400",
     "backup:global:push": "bash ./scripts/backup-and-push.sh",
     "serve": "tsx src/index.ts serve"
   },
